correction mineur de la syntaxe des balises

--- a/index.html
+++ b/index.html
@@ -23,20 +23,18 @@
 
   <!-------------------------------MAIN CONTAINER------------------------------------------------------>
 
- <div class="main-container">
+ <div class="mainContainer">
      <section class="search">
-         <header class="hearder-search">
-             <h1 class="header__searchTitle">Trouver votre hébergement pour des vacances de rêve</h1>
-             <p class="header__searchParagraph">En plein centre ville ou en pleine nature</p>
+         <header class="hearderSearch">
+             <h1 class="headerSearchTitle">Trouver votre hébergement pour des vacances de rêve</h1>
+             <p class="headerSearchParagraph">En plein centre ville ou en pleine nature</p>
          </header>
 
-         <form class="search-form">
-             <div class="search-form--icone">
-                 <i class="fas fa-map-marker-alt"></i>
-             </div>
-             <input class="search-form__input" type="search" placeholder="Bordeaux, France">
-             <button class="search-form__button">
-                 <div class="searc-form__button__text">Recherche</div>
+         <form class="searchForm">
+             <div class="searchFormIcone"> <i class="fas fa-map-marker-alt"></i></div>
+             <input class="searchFormInput" type="search" placeholder="Bordeaux, France">
+             <button class="searchFormButton">
+                 <div class="searchFormButtonText">Recherche</div>
              </button>
          </form>
 
