html: ajout de la section hebergement css:Pas encore fait

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </nav>
       </header>
 
- <!-------------------------------FIN DU HEADER------------------------------------------------------>
+ <!-------------------------------HEADER END----------------------------------------------------->
 
   <!-------------------------------MAIN CONTAINER------------------------------------------------------>
 
@@ -29,23 +29,92 @@
              <h1 class="headerSearchTitle">Trouver votre hébergement pour des vacances de rêve</h1>
              <p class="headerSearchParagraph">En plein centre ville ou en pleine nature</p>
          </header>
-
+ <!-------------------------------SEARCH------------------------------------------------------>
          <form class="searchForm">
-             <div class="searchFormIcone"> <i class="fas fa-map-marker-alt"></i></div>
+             <div class="searchFormIcone"><i class="fas fa-map-marker-alt"></i></div>
              <input class="searchFormInput" type="search" placeholder="Bordeaux, France">
              <button class="searchFormButton">
                  <div class="searchFormButtonText">Recherche</div>
              </button>
          </form>
 
-
+         <div class="filter">
+             <h2 class="filterMainTitle">Filtres</h2>
+                <div class="containerFilter">
+                   <div class="filterIcon"><i class="fas fa-money-bill-wave"></i></div>
+                   <div class="filterTitle">Economique</div>
+                </div>
+                <div class="containerFilter">
+                    <div class="filterIcon"><i class="fas fa-child"></i></div>
+                    <div class="filterTitle">Familial</div>
+                 </div>
+                 <div class="containerFilter">
+                    <div class="filterIcon"><i class="fas fa-heart"></i></div>
+                    <div class="filterTitle">Romantique</div>
+                 </div>
+                 <div class="containerFilter">
+                    <div class="filterIcon"><i class="fas fa-dog"></i></div>
+                    <div class="filterTitle">Animaux autorisés</div>
+                 </div>
+            </div>
+                 <div class="informationPoint">
+                     <div class="informationPointIcon"><i class="fas fa-info-circle"></i></div>
+                     <div class="informationPointParagraph">Plus de 500 logements sont disponibles dans cette ville</div>
+                 </div>            
      </section>
+ <!-------------------------------SEARCH END------------------------------------------------------>
+
+ <!-------------------------------RESERVATION------------------------------------------------------>
+
+        <div class="reservation">
+            <h1 class="reservTitle">Hebergement à Marseille</h1>
+            <div class="reservContainer">
+                <div class="reservContainerBloc">
+                    <img class="blocImg"src="assets/images/hebergements/small/img7.jpg"></div>
+                    <h2 class="blocTitle">Auberge la cannebiére</h2>
+                    <p class="blocParagraph">Nuit a partir de 25€</p>
+                    <div class="blocRate">
+                        <i class="far fa-star rateStars" data-active="true"></i>
+                        <i class="far fa-star rateStars" data-active="true"></i>
+                        <i class="far fa-star rateStars" data-active="true"></i>
+                        <i class="far fa-star rateStars" data-active="true"></i>
+                        <i class="far fa-star rateStars" data-active="flase"></i>
+                    </div>
+                </div>
+                <div class="reservContainerBloc">
+                    <img class="blocImg"src="assets/images/hebergements/small/img2.jpg"></div>
+                    <h2 class="blocTitle">hôtel du port</h2>
+                    <p class="blocParagraph">Nuit a partir de 52€</p>
+                </div>
+                <div class="reservContainerBloc">
+                    <img class="blocImg"src="assets/images/hebergements/small/img9.jpg"></div>
+                    <h2 class="blocTitle">Hôtel les mouettes</h2>
+                    <p class="blocParagraph">Nuit a partir de 76€</p>
+                </div>
+                <div class="reservContainerBloc">
+                    <img class="blocImg"src="assets/images/hebergements/small/img1.jpg"></div>
+                    <h2 class="blocTitle">Hôtel de la mer</h2>
+                    <p class="blocParagraph">Nuit a partir de 46€</p>
+                </div>
+                <div class="reservContainerBloc">
+                    <img class="blocImg" src="assets/images/hebergements/small/img8.jpg"></div>
+                    <h2 class="blocTitle">Auberge le panier</h2>
+                    <p class="blocParagraph">Nuit a partir de 23€</p>
+                </div>
+                <div class="reservContainerBloc">
+                    <img class="blocImg"src="assets/images/hebergements/small/img4.jpg"></div>
+                    <h2 class="blocTitle">Hôtel chez Anima</h2>
+                    <p class="blocParagraph">Nuit a partir de 96€</p>
+                </div>
+            </div>
+        </div>
+
+
+
+
 
 
  </div>
-
-
-
 
 </body>
 
