--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header class="header">
         <img class="headerImg" src="./assets/images/logo/reservia.svg" alt="Reservia">
         <nav class="headerNav">
-          <a class="headerNavLink" href="#" data-active="true">Hébergement</a>
-          <a class="headerNavLink" href="#" data-active="false">Activités</a> 
+          <a class="headerNavLink" href="#host" data-active="true">Hébergement</a>
+          <a class="headerNavLink" href="#activity" data-active="false">Activités</a> 
           <a class="headerNavLink" href="#" data-active="true">S'inscrire</a>
         </nav>
       </header>
@@ -23,7 +23,6 @@
 
   <!-------------------------------MAIN CONTAINER------------------------------------------------------>
 
- <div class="mainContainer">
      <section class="search">
          <header class="hearderSearch">
              <h1 class="headerSearchTitle">Trouver votre hébergement pour des vacances de rêve</h1>
@@ -66,56 +65,200 @@
 
  <!-------------------------------RESERVATION------------------------------------------------------>
 
-        <div class="reservation">
-            <h1 class="reservTitle">Hebergement à Marseille</h1>
-            <div class="reservContainer">
-                <div class="reservContainerBloc">
-                    <img class="blocImg"src="assets/images/hebergements/small/img7.jpg"></div>
-                    <h2 class="blocTitle">Auberge la cannebiére</h2>
-                    <p class="blocParagraph">Nuit a partir de 25€</p>
-                    <div class="blocRate">
-                        <i class="far fa-star rateStars" data-active="true"></i>
-                        <i class="far fa-star rateStars" data-active="true"></i>
-                        <i class="far fa-star rateStars" data-active="true"></i>
-                        <i class="far fa-star rateStars" data-active="true"></i>
-                        <i class="far fa-star rateStars" data-active="flase"></i>
-                    </div>
-                </div>
-                <div class="reservContainerBloc">
-                    <img class="blocImg"src="assets/images/hebergements/small/img2.jpg"></div>
-                    <h2 class="blocTitle">hôtel du port</h2>
-                    <p class="blocParagraph">Nuit a partir de 52€</p>
-                </div>
-                <div class="reservContainerBloc">
-                    <img class="blocImg"src="assets/images/hebergements/small/img9.jpg"></div>
-                    <h2 class="blocTitle">Hôtel les mouettes</h2>
-                    <p class="blocParagraph">Nuit a partir de 76€</p>
-                </div>
-                <div class="reservContainerBloc">
-                    <img class="blocImg"src="assets/images/hebergements/small/img1.jpg"></div>
-                    <h2 class="blocTitle">Hôtel de la mer</h2>
-                    <p class="blocParagraph">Nuit a partir de 46€</p>
-                </div>
-                <div class="reservContainerBloc">
-                    <img class="blocImg" src="assets/images/hebergements/small/img8.jpg"></div>
-                    <h2 class="blocTitle">Auberge le panier</h2>
-                    <p class="blocParagraph">Nuit a partir de 23€</p>
-                </div>
-                <div class="reservContainerBloc">
-                    <img class="blocImg"src="assets/images/hebergements/small/img4.jpg"></div>
-                    <h2 class="blocTitle">Hôtel chez Anima</h2>
-                    <p class="blocParagraph">Nuit a partir de 96€</p>
-                </div>
+ <section class="hostContainer" id="host">
+	<div class="middleContainer">
+		<h1 class="mainContainerTitle">Hébergement à marseille</h1>
+<div class="hostMainContainer">
+	<div class="postReservation">
+		<img class="reservationImg" src="assets/images/hebergements/small/img7.jpg"></img>
+		<div class="reservationInfo">
+		<p class="reservationInfoParagraph"><strong>Auberge la Cannebére</strong></p>
+	    <p class="reservationInfoParagraph">Nuit à partir de <strong>25€</strong></p>
+	        <div class="reservationStars">
+              <i class="fas fa-star ReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star ReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star ReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star ReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star ReservationStarsIcon" data-active="false"></i>
             </div>
         </div>
+	</div>
+	<div class="postReservation">
+		<img class="reservationImg" src="assets/images/hebergements/small/img2.jpg"></img>
+	<div class="reservationInfo">
+	   <p class="reservationInfoParagraph"><strong>Hôtel du port</strong></p>
+       <p class="reservationInfoParagraph">Nuit à partir de <strong>52€</strong></p>
+       <div class="reservationStars">
+              <i class="fas fa-star ReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star ReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star ReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star ReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star ReservationStarsIcon" data-active="true"></i>
+            </div>
+        </div>
+    </div>
+	<div class="postReservation">
+		<img class="reservationImg" src="assets/images/hebergements/small/img9.jpg"></img>
+		<div class="reservationInfo">
+			<p class="reservationInfoParagraph"><strong>Hôtel les mouettes</strong></p>
+	        <p class="reservationInfoParagraph">Nuit à partir de <strong>76€</strong></p>
+	        <div class="reservationStars">
+              <i class="fas fa-star ReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star ReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star ReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star ReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star ReservationStarsIcon" data-active="false"></i>
+              </div>
+        </div>
+	</div>
+	<div class="postReservation">
+		<img class="reservationImg" src="assets/images/hebergements/small/img1.jpg"></img>
+		<div class="reservationInfo">
+			<p class="reservationInfoParagraph"><strong>Hôtel de la mer</strong></p>
+	        <p class="reservationInfoParagraph">Nuit à partir de <strong>46€</strong></p>
+	        <div class="reservationStars">
+              <i class="fas fa-star ReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star ReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star ReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star ReservationStarsIcon" data-active="false"></i>
+              <i class="fas fa-star ReservationStarsIcon" data-active="false"></i>
+              </div>
+	    </div>
+	</div>
+	<div class="postReservation">
+		<img class="reservationImg" src="assets/images/hebergements/small/img8.jpg"></img>
+		<div class="reservationInfo">
+			<p class="reservationInfoParagraph"><strong>Auberge le panier</strong></p>
+	        <p class="reservationInfoParagraph">Nuit à partir de <strong>23€</strong></p>
+	        <div class="reservationStars">
+              <i class="fas fa-star ReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star ReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star ReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star ReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star ReservationStarsIcon" data-active="false"></i>
+              </div>
+	    </div>
+	</div>
+	<div class="postReservation">
+		<img class="reservationImg" src="assets/images/hebergements/small/img4.jpg"></img>
+		<div class="reservationInfo">
+		   <p class="reservationInfoParagraph"><strong>Hôtel chez Amina</strong></p>
+	       <p class="reservationInfoParagraph">Nuit à partir de <strong>96€</strong></p>
+	       <div class="reservationStars">
+              <i class="fas fa-star ReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star ReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star ReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star ReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star ReservationStarsIcon" data-active="true"></i>
+              </div>
+	     </div>
+	</div>
+	</div>
+	<h3 class="mainContainerLastTitle">Afficher plus</h3>
+</div>
 
+    <div class="asideTitleContainer">
+    	<h1 class="asideTitle">Les plus populaires</h1>
+    <aside class="asideContainer">
+      <div class="popbloc">
+		<img class="asideImg" src="assets/images/hebergements/small/img5.jpg"></img>
+		<div class="asideReservationInfo">
+		<p class="asideReservationInfoParagraph"><strong>Hôtel le soleil du mâlin</strong>
+	     Nuit à partir de <strong>128€</strong></p>
+	       <div class="asideReservationStars">
+              <i class="fas fa-star asideReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star asideReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star asideReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star asideReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star asideReservationStarsIcon" data-active="true"></i>
+           </div>
+        </div>
+	</div>
+	 <div class="popbloc">
+		<img class="asideImg" src="assets/images/hebergements/small/img6.jpg"></img>
+		<div class="asideReservationInfo">
+		   <p class="asideReservationInfoParagraph"><strong>Au coeur de l'eau chambres d'hôtes</strong><br>
+	       Nuit à partir de <strong>71€</strong></p>
+	       <div class="asideReservationStars">
+              <i class="fas fa-star asideReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star asideReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star asideReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star asideReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star asideReservationStarsIcon" data-active="false"></i>
+           </div>
+        </div>
+	</div> 
+	 <div class="popbloc">
+		<img class="asideImg" src="assets/images/hebergements/small/img3.jpg"></img>
+		<div class="asideReservationInfo">
+		   <p class="asideReservationInfoParagraph"><strong>Hôtel tout bleu et blanc</strong><br>
+	       Nuit à partir de <strong>68€</strong></p>
+	       <div class="asideReservationStars">
+              <i class="fas fa-star asideReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star asideReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star asideReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star asideReservationStarsIcon" data-active="true"></i>
+              <i class="fas fa-star asideReservationStarsIcon" data-active="false"></i>
+           </div>
+        </div>
+	</div>
+    </aside>
+   </div>
+</section>
+<!-------------------------------------ACTIVITY-------------------------------------------------->
 
-
-
-
-
- </div>
-
+<section class="activity" id="activity">
+  <h1 class="activityTitle">Activités à marseille</h1>
+  <div class="activityMainContainer">
+      <div class="activitylargeBolc">
+          <img class="activitylargeImg" src="assets/images/activites/small/paysage2.jpg"></img>
+          <p class="activityParagraph"><strong>Vieux port</strong></p>
+      </div>
+      <div class="activitySmallBolc">
+           <div class="smallBloc">
+              <img class="activitySmallImg" src="assets/images/activites/small/paysage3.jpg"></img>
+              <p class="activitySmallParagraph"><strong>Fort de Pontégues</strong></p>
+          </div>
+        <div class="smallLittleBloc">
+               <img class="activitySmallLittleImg" src="assets/images/activites/small/paysage6.jpg"></img>
+               <p class="activitySmallParagraph"><strong>Île du Frioul</strong></p>
+        </div>
+    </div>
+    <div class="activitylargeBolc">
+      <img class="activitylargeImg" src="assets/images/activites/small/paysage5.jpg"></img>
+      <p class="activityParagraph"><strong>Parc National des Calanques</strong></p>
+  </div>
+  <div class="activitySmallBolc">
+          <div class="smallLittleLastBloc">
+             <img class="activitySmallLittleImg" src="assets/images/activites/small/paysage1.jpg"></img>
+             <p class="activitySmallParagraph"><strong>Notre-Dame-de-la-Garde</strong></p>
+          </div>
+          <div class="smallBloc">
+             <img class="activitySmallImg" src="assets/images/activites/small/paysage4.jpg"></img>
+             <p class="activitySmallParagraph"><strong>Parc Longchamp</strong></p>
+          </div>
+</div>
+</div>
+</section>
+<!-- ---------------------------------------footer---------------------------------- -->
+<footer>
+    <div class="footerMenu">
+        <h3><strong>A propos</strong></h3>
+        <li><a href="#">Fonctionnement du site</a></li>
+        <li><a href="#">Conditions Générales de vente</a></li>
+        <li><a href="#">Données et confidentialité</a></li>
+    </div>
+    <div class="footerMenu">
+        <h3><strong>Nos hebergements</strong></h3>
+        <li><a href="#">Chartre qualité</a></li>
+        <li><a href="#">soumettre votre hôtel</a></li>
+    </div>
+    <div class="footerMenu">
+        <h3><strong>Assistance</strong> </h3>
+        <li><a href="#">Centre d'aide</a></li>
+        <li><a href="#">Nous contacter</a></li>
+    </div>
+</footer>
 </body>
 
 
