correction balise html et css rajout hover sur les filtres

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 
  <!-------------------------------HEADER END----------------------------------------------------->
 
-  <!-------------------------------MAIN CONTAINER------------------------------------------------------>
-
+<!-------------------------------SEARCH------------------------------------------------------>
+         
      <section class="search">
          <header class="hearderSearch">
              <h1 class="headerSearchTitle">Trouver votre hébergement pour des vacances de rêve</h1>
              <p class="headerSearchParagraph">En plein centre ville ou en pleine nature</p>
          </header>
- <!-------------------------------SEARCH------------------------------------------------------>
+         
          <form class="searchForm">
              <div class="searchFormIcone"><i class="fas fa-map-marker-alt"></i></div>
              <input class="searchFormInput" type="search" placeholder="Bordeaux, France">
@@ -160,7 +160,7 @@
     <div class="asideMainContainer">
     	<h1 class="asideTitle">Les plus populaires</h1>
     <aside class="asideContainer">
-      <a class="popbloc">
+      <a class="popblock">
 		<img class="asideImg" src="assets/images/hebergements/small/img5.jpg"></img>
 		<div class="asideReservationInfo">
 		<p class="asideReservationInfoParagraph"><strong>Hôtel le soleil du mâlin</strong>
@@ -174,7 +174,7 @@
            </div>
         </div>
       </a>
-	 <a class="popbloc">
+	 <a class="popblock">
 		<img class="asideImg" src="assets/images/hebergements/small/img6.jpg"></img>
 		<div class="asideReservationInfo">
 		   <p class="asideReservationInfoParagraph"><strong>Au coeur de l'eau chambres d'hôtes</strong><br>
@@ -188,7 +188,7 @@
            </div>
         </div>
       </a> 
-	 <a class="popbloc">
+	 <a class="popblock">
 		<img class="asideImg" src="assets/images/hebergements/small/img3.jpg"></img>
 		<div class="asideReservationInfo">
 		   <p class="asideReservationInfoParagraph"><strong>Hôtel tout bleu et blanc</strong><br>
