ajout de balise sémantique et optimisation des media queries

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
          
          <form class="searchForm">
              <div class="searchFormIcone"><i class="fas fa-map-marker-alt"></i></div>
-             <input class="searchFormInput" type="search" placeholder="Bordeaux, France">
+             <input class="searchFormInput" type="search" placeholder="Marseille, France">
              <button class="searchFormButton">
                  <div class="searchFormButtonText">Recherche</div>
              </button>
@@ -68,8 +68,8 @@
  <section class="hostContainer" id="host">
 	<div class="middleContainer">
 		<h1 class="mainContainerTitle">Hébergement à marseille</h1>
-<div class="hostMainContainer">
-	<a class="postReservation">
+<article class="hostMainContainer">
+	<a class="postReservation"a href="#">
 		<img class="reservationImg" src="assets/images/hebergements/small/img7.jpg"></img>
 		<div class="reservationInfo">
 		<p class="reservationInfoParagraph"><strong>Auberge la Cannebére</strong></p>
@@ -83,7 +83,7 @@
             </div>
         </div>
       </a>
-	<a class="postReservation">
+ <a class="postReservation"a href="#">
 		<img class="reservationImg" src="assets/images/hebergements/small/img2.jpg"></img>
 	<div class="reservationInfo">
 	   <p class="reservationInfoParagraph"><strong>Hôtel du port</strong></p>
@@ -97,7 +97,7 @@
             </div>
         </div>
       </a>
-	<a class="postReservation">
+  <a class="postReservation"a href="#">
 		<img class="reservationImg" src="assets/images/hebergements/small/img9.jpg"></img>
 		<div class="reservationInfo">
 			<p class="reservationInfoParagraph"><strong>Hôtel les mouettes</strong></p>
@@ -111,7 +111,7 @@
               </div>
         </div>
       </a>
-	<a class="postReservation">
+  <a class="postReservation"a href="#">
 		<img class="reservationImg" src="assets/images/hebergements/small/img1.jpg"></img>
 		<div class="reservationInfo">
 			<p class="reservationInfoParagraph"><strong>Hôtel de la mer</strong></p>
@@ -125,7 +125,7 @@
               </div>
 	    </div>
     </a>
-	<a class="postReservation">
+  <a class="postReservation"a href="#">
 		<img class="reservationImg" src="assets/images/hebergements/small/img8.jpg"></img>
 		<div class="reservationInfo">
 			<p class="reservationInfoParagraph"><strong>Auberge le panier</strong></p>
@@ -139,7 +139,7 @@
               </div>
 	    </div>
     </a>
-	<a class="postReservation">
+ <a class="postReservation"a href="#">
 		<img class="reservationImg" src="assets/images/hebergements/small/img4.jpg"></img>
 		<div class="reservationInfo">
 		   <p class="reservationInfoParagraph"><strong>Hôtel chez Amina</strong></p>
@@ -153,17 +153,17 @@
               </div>
 	     </div>
       </a>
-	</div>
+</article>
 	<a class="mainContainerLastTitle" a href="#"><strong>Afficher plus</strong></a>
 </div>
-
+<!------------------------------------- aside ------------------------------------>
     <div class="asideMainContainer">
-    	<h1 class="asideTitle">Les plus populaires</h1>
+    	<h1 class="asideTitle">Les plus populaires<i class="fas fa-chart-line"></i></h1>
     <aside class="asideContainer">
-      <a class="popblock">
+      <a class="popblock"a href="#">
 		<img class="asideImg" src="assets/images/hebergements/small/img5.jpg"></img>
 		<div class="asideReservationInfo">
-		<p class="asideReservationInfoParagraph"><strong>Hôtel le soleil du mâlin</strong>
+		<p class="asideReservationInfoParagraph"><strong>Hôtel le soleil du mâlin</strong><br>
 	     Nuit à partir de <strong>128€</strong></p>
 	       <div class="asideReservationStars">
               <i class="fas fa-star asideReservationStarsIcon" data-active="true"></i>
@@ -174,7 +174,7 @@
            </div>
         </div>
       </a>
-	 <a class="popblock">
+   <a class="popblock"a href="#">
 		<img class="asideImg" src="assets/images/hebergements/small/img6.jpg"></img>
 		<div class="asideReservationInfo">
 		   <p class="asideReservationInfoParagraph"><strong>Au coeur de l'eau chambres d'hôtes</strong><br>
@@ -188,7 +188,7 @@
            </div>
         </div>
       </a> 
-	 <a class="popblock">
+  <a class="popblock"a href="#">
 		<img class="asideImg" src="assets/images/hebergements/small/img3.jpg"></img>
 		<div class="asideReservationInfo">
 		   <p class="asideReservationInfoParagraph"><strong>Hôtel tout bleu et blanc</strong><br>
